unpackaged/main/default/objects/SKU_Product__c/SKU_Product__c.object-meta.xml
<CustomObject>
    <description>Used to store SKU Product details for all MyCase Brands</description>
    <label>SKU Product</label>
    <nameField>
        <label>SKU Product ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKU Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>