unpackaged/main/default/objects/SKU_Product__c/fields/Activation_Type__c.field-meta.xml
<CustomField>
    <fullName>Activation_Type__c</fullName>
    <inlineHelpText>Product picker uses this field to return to date filter products or Not (Not Date Controlled)</inlineHelpText>
    <label>Activation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Created Date</fullName>
            </value>
            <value>
                <fullName>Today Date</fullName>
            </value>
            <value>
                <fullName>Not Date Controlled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>