unpackaged/main/default/objects/SKU_Product__c/fields/Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Type__c</fullName>
    <inlineHelpText>Used in reporting and product definition</inlineHelpText>
    <label>Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named User</fullName>
            </value>
            <value>
                <fullName>Seat</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>