unpackaged/main/default/objects/SKU_Product__c/fields/Allocation_Unit__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Unit__c</fullName>
    <inlineHelpText>Keeps track of the amount of seats/licenses for the SKU.
Used in reporting and product definition</inlineHelpText>
    <label>Allocation Unit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>