unpackaged/main/default/objects/SKU_Product__c/fields/Associated_Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Associated_Main_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the SKU product record that this addon user supplements</inlineHelpText>
    <label>Associated Main Product</label>
    <referenceTo>SKU_Product__c</referenceTo>
    <relationshipLabel>SKU Products (Associated Main Product)</relationshipLabel>
    <relationshipName>SKU_Products</relationshipName>
    <type>Lookup</type>
</CustomField>