unpackaged/main/default/objects/SKU_Product__c/fields/Available_for_All_Pricing_Types__c.field-meta.xml
<CustomField>
    <fullName>Available_for_All_Pricing_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to allow Add-ons and Services to display in Product Picker regardless of main product&#39;s pricing type.</description>
    <label>Available for All Pricing Types</label>
    <type>Checkbox</type>
</CustomField>