unpackaged/main/default/objects/SKU_Product__c/fields/Billing_Seq__c.field-meta.xml
<CustomField>
    <fullName>Billing_Seq__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Billing Seq</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>