unpackaged/main/default/objects/SKU_Product__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Default Quantity</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>