unpackaged/main/default/objects/SKU_Product__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in automation</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>