unpackaged/main/default/objects/SKU_Product__c/fields/Maximum_Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Sales_Discount__c</fullName>
    <inlineHelpText>Represents the maximum discount that a sales rep can extend before requiring approval (formal or informal) from management.</inlineHelpText>
    <label>Maximum Sales Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>