unpackaged/main/default/objects/SKU_Product__c/fields/Opportunity_Record_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Override__c</fullName>
    <label>Opportunity Record Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LawPay_Payments</fullName>
            </value>
            <value>
                <fullName>LawPay_Software</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>