unpackaged/main/default/objects/SKU_Product__c/fields/Price_Azure__c.field-meta.xml
<CustomField>
    <fullName>Price_Azure__c</fullName>
    <label>Price - Azure</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>