unpackaged/main/default/objects/SKU_Product__c/fields/Price_Base__c.field-meta.xml
<CustomField>
    <fullName>Price_Base__c</fullName>
    <description>Base Price of Product / lowest tier</description>
    <label>Price - Base</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>