unpackaged/main/default/objects/SKU_Product__c/fields/Price_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Price_Tier_2__c</fullName>
    <label>Price - Tier 2</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>