unpackaged/main/default/objects/SKU_Product__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Onetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>