unpackaged/main/default/objects/SKU_Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>Used in automation</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>