unpackaged/main/default/objects/SKU_Product__c/fields/Product_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Type__c</fullName>
    <label>Product Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Type</valueSetName>
    </valueSet>
</CustomField>