unpackaged/main/default/objects/SKU_Product__c/fields/Product_Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Family__c</fullName>
    <inlineHelpText>Used in automation.</inlineHelpText>
    <label>Product Sub Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>