unpackaged/main/default/objects/SKU_Product__c/fields/Product_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Product_Subtype__c</fullName>
    <inlineHelpText>This is used in product selection flows</inlineHelpText>
    <label>Product Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>