unpackaged/main/default/objects/SKU_Product__c/fields/Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier__c</fullName>
    <description>Product offering tier that SKU is available for.</description>
    <inlineHelpText>Product offering tier that SKU is available for. If SKU can be used under many tiers, then add all that apply. 
Used in automation</inlineHelpText>
    <label>Product Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>