unpackaged/main/default/objects/SKU_Product__c/fields/Quantity_Locked__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Locked</label>
    <type>Checkbox</type>
</CustomField>