unpackaged/main/default/objects/SKU_Product__c/fields/Required_for_Parent__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required for Parent</label>
    <referenceTo>SKU_Product__c</referenceTo>
    <relationshipLabel>SKU Products</relationshipLabel>
    <relationshipName>SKU_Products_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>