unpackaged/main/default/objects/SKU_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Used in automation</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Grand-Fathered</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>