unpackaged/main/default/objects/SKU_Product__c/recordTypes/AffiniPay.recordType-meta.xml
<RecordType>
    <fullName>AffiniPay</fullName>
    <active>true</active>
    <label>AffiniPay</label>
</RecordType>