unpackaged/main/default/objects/SKU_Product__c/recordTypes/CASEpeer.recordType-meta.xml
<RecordType>
    <fullName>CASEpeer</fullName>
    <active>true</active>
    <description>For use with CASEpeer products and services</description>
    <label>CASEpeer</label>
</RecordType>