unpackaged/main/default/objects/SKU_Product__c/recordTypes/ClientPay.recordType-meta.xml
<RecordType>
    <fullName>ClientPay</fullName>
    <active>true</active>
    <description>For use with ClientPay products and services</description>
    <label>ClientPay</label>
</RecordType>