unpackaged/main/default/objects/SKU_Product__c/recordTypes/CPACharge.recordType-meta.xml
<RecordType>
    <fullName>CPACharge</fullName>
    <active>true</active>
    <description>For use with CPACharge products and services</description>
    <label>CPACharge</label>
</RecordType>