unpackaged/main/default/objects/SKU_Product__c/recordTypes/Docketwise.recordType-meta.xml
<RecordType>
    <fullName>Docketwise</fullName>
    <active>true</active>
    <description>For use with Docketwise products and services</description>
    <label>Docketwise</label>
</RecordType>