unpackaged/main/default/objects/SKU_Product__c/recordTypes/LawPay.recordType-meta.xml
<RecordType>
    <fullName>LawPay</fullName>
    <active>true</active>
    <description>For use with LawPay products and services</description>
    <label>LawPay</label>
</RecordType>