unpackaged/main/default/objects/SKU_Product__c/recordTypes/MedPay.recordType-meta.xml
<RecordType>
    <fullName>MedPay</fullName>
    <active>true</active>
    <label>MedPay</label>
</RecordType>