unpackaged/main/default/objects/SKU_Product__c/recordTypes/MyCase.recordType-meta.xml
<RecordType>
    <fullName>MyCase</fullName>
    <active>true</active>
    <description>For use with MyCase products and services</description>
    <label>MyCase</label>
</RecordType>