unpackaged/main/default/objects/SKU_Product__c/recordTypes/Soluno.recordType-meta.xml
<RecordType>
    <fullName>Soluno</fullName>
    <active>true</active>
    <description>For use with Soluno products and services</description>
    <label>Soluno</label>
</RecordType>