unpackaged/main/default/objects/SKU_Product__c/recordTypes/Woodpecker.recordType-meta.xml
<RecordType>
    <fullName>Woodpecker</fullName>
    <active>true</active>
    <description>For use with Woodpecker products and services</description>
    <label>Woodpecker</label>
</RecordType>