unpackaged/main/default/objects/SKU_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Pricing_Type__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Subtype__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Sub_Family__c</columns>
    <columns>Product_Tier__c</columns>
    <columns>Allocation_Type__c</columns>
    <columns>Allocation_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Price_Base__c</columns>
    <columns>Default_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>